# HORenderer3

./: .gitignore  CMakeLists.txt  LICENSE  README.ko.md  README.md
.github/workflows/: ci-pipeline.yml  clang-format.yml  cmake-multi-platform.yml
assets/DamagedHelmet/: code.txt
assets/Simple Barrel/: model_barrel.mtl
assets/test_assets/teapot/: teapot.fbx
assets/test_assets/test_gltf/BoxTextured/glTF/: BoxTextured.gltf
assets/test_assets/test_obj/obj_cube/: cube.mtl
assets/test_assets/test_obj/obj_cube_dup_texture/: cube.mtl
assets/test_assets/test_obj/obj_multiple_mesh/: multi_mesh.mtl
core/: .clang-format  .clang-tidy  CMakeLists.txt  macros.h
core/io/: image.h  image_importer.cc  image_importer.h  path.cc  path.h  resource_importer.cc  resource_importer.h  resource_loader.cc  resource_loader.h
core/math/: aabb.cc  aabb.h  basis_2d.cc  basis_2d.h  basis_3d.cc  basis_3d.h  color128.cc  color128.h  color32.cc  color32.h  frustum.cc  frustum.h  interp_funcs.h  math_defs.h  math_funcs.h  matrix2x2.cc  matrix2x2.h  matrix3x3.cc  matrix3x3.h  matrix4x4.cc  matrix4x4.h  plane.cc  plane.h  projection.cc  projection.h  quaternion.cc  quaternion.h  sphere.cc  sphere.h  transform_2d.cc  transform_2d.h  transform_3d.cc  transform_3d.h  vector2.cc  vector2.h  vector3.cc  vector3.h  vector4.cc  vector4.h
core/templates/: atomic_numeric.h  id.h  id_owner.h
core/thread/: binary_recursive_mutex.h  condition_variable.h  job_system.h  mutex.h  semaphore.h  spin_lock.h  thread.h
core/time/: game_timer.h
custom_renderers/: CMakeLists.txt
custom_renderers/samples/pbr_shadow_sample/renderer/: pbr_shadow_renderer.h
custom_renderers/samples/pbr_shadow_sample/shader/: depthmap_fs.h
lib/: CMakeLists.txt  stb.cc
renderer/: CMakeLists.txt  input_key.h  renderer.cc  renderer.h  renderer_adapter.h
resource/: .clang-tidy  CMakeLists.txt  animation.h  material.h  mesh.h  resource_manager.cc  resource_manager.h  skeleton.h  skin.h  texture.h  texture_type.h
samples/: CMakeLists.txt
samples/blinn_phong_sample/renderer/: blinn_phong_renderer.cc  blinn_phong_renderer.h
samples/blinn_phong_sample/shader/: blinn_phong_fs.h  blinn_phong_vs.h
samples/pbr_shadow_sample/renderer/: pbr_shadow_renderer.cc
samples/pbr_shadow_sample/shader/: depthmap_vs.h  pbr_fs.h  pbr_vs.h
test/: CmakeLists.txt
test/core/: CmakeLists.txt
test/core/io/: CmakeLists.txt  test_image.cc  test_path.cc  test_resource_importer.cc  test_resource_loader.cc
test/core/math/: CmakeLists.txt  test_aabb.cc  test_basis_2d.cc  test_basis_3d.cc  test_color128.cc  test_color32.cc  test_frustum.cc  test_interp_func.cc  test_math_func.cc  test_matrix2x2.cc  test_matrix3x3.cc  test_matrix4x4.cc  test_plane.cc  test_projection.cc  test_quaternion.cc  test_sphere.cc  test_transform_2d.cc  test_transform_3d.cc  test_vector2.cc  test_vector3.cc  test_vector4.cc
test/core/templates/: CmakeLists.txt  test._atomic_numeric.cc  test_id.cc  test_id_owner.cc
test/core/thread/: CmakeLists.txt  test_binary_recursive_mutex.cc  test_condition_variable.cc  test_job_system.cc  test_mutex.cc  test_semaphore.cc  test_spin_lock.cc  test_thread.cc
test/core/thread_fallback/: CmakeLists.txt  test_binary_recursive_mutex_fallback.cc  test_condition_variable_fallback.cc  test_job_system_fallback.cc  test_mutex_fallback.cc  test_semaphore_fallback.cc  test_spin_lock_fallback.cc  test_thread_fallback.cc
test/core/time/: CmakeLists.txt  test_game_timer.cc
test/resource/: CmakeLists.txt  test_animation.cc  test_mesh.cc  test_resource_manager.cc  test_skeleton.cc  test_skin.cc
test/virtual_gpu/: CmakeLists.txt  test_virtual_gpu.cc  test_virtual_gpu_utils.cc  virtual_gpu_tester.cc  virtual_gpu_tester.h
virtual_gpu/: .clang-tidy  CMakeLists.txt  shader_api.h  vg.cc  vg.h  virtual_gpu.cc  virtual_gpu.h  virtual_gpu_utils.h
